--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection":"Data Source=ecommerce.db"
+  },
+  "ApiUrl":"https://localhost:7225/"
 
-  }
 }
